# automl

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  progress.md  pyproject.toml  requirements.txt
api/: auth.py  deps.py  main.py  schemas.py
api/routes/: approvals.py  artifacts.py  events.py  runs.py  uploads.py
cli/: run.py
core/agents/: __init__.py  base.py  decomposition.py  eda.py  feature_engineering.py  feature_refine.py  feature_selection.py  ingestion.py  modeling.py  optimization.py  ppg_mapping.py  ppg_selection.py  results_reasoning.py  simulation.py  validation.py
core/data/: charts.py  dbt_runner.py  expectations.py  ge_runner.py  ingestion_report.py  io.py  schema.py  tools.py
core/decomp/: due_to.py  groups.py
core/features/: eda.py  engineering.py  refine.py
core/llm/: client.py  cost.py  routing.py
core/models/: base.py  bayes_hier.py  lightgbm_model.py  loglog_ols.py  metrics.py  semilog_ols.py  shap_attribution.py
core/optimization/: __init__.py  constraints.py  continuous.py  milp.py  predict.py
core/orchestrator/: events.py  gates.py  graph.py  runner.py  state.py
core/ppg/: __init__.py  cluster.py  features.py  score.py
core/simulation/: grid.py
core/validation/: __init__.py  checks.py  rolling.py
dbt/automl_dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
scripts/: dev.sh  render_architecture.py  seed_synthetic.py
synthetic/: elasticity_spec.py  generator.py  truth.json
tests/integration/: test_ingestion_agent.py
web/: next.config.mjs  package.json  pnpm-lock.yaml
(+80 files in other folders)
